# splice

./: .gitignore  CLAUDE.md  LICENSE  README.md  features.md  index.html  package-lock.json  package.json  settings.html  tailwind.config.js  tsconfig.e2e.json  vercel.json  vite.config.ts  vitest.config.api.ts  vitest.config.ts  wdio.config.ts
.github/workflows/: ci.yml
demo/: architecture.html  dependency-graph.html  git-graph.html  treemap.html
docs/: architecture.html  index.html  robots.txt  sitemap.xml  tailwind.config.js  tailwind.css
docs/blog/: index.html  why-we-built-splice.html
docs/releases/: index.html
docs/themes/: index.html
scripts/: chaos.sh  dev-api-test.py  screenshots.sh  stress-test.py
src/: app.css  main.ts  settings.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/benches/: terminal_grid.rs  terminal_serialize.rs  terminal_vte.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  icon_orange.icns
src-tauri/src/: dock.rs  lib.rs  main.rs  state.rs  window_swizzle.rs
src-tauri/src/attention/: handlers.rs  hook.rs  http.rs  mod.rs  server.rs  token.rs
src-tauri/src/commands/: fs.rs  git.rs  mod.rs  settings.rs  ssh.rs  terminal.rs  themes.rs  workspace.rs
src-tauri/src/commands/fs/: mod.rs  paths.rs  read.rs  recent.rs  utils.rs  watch.rs  write.rs
src-tauri/src/lsp/: mod.rs
src-tauri/src/terminal/: color.rs  emitter.rs  grid.rs  mod.rs  pty.rs  term.rs
src-tauri/src/terminal/tests/: charset.rs  cursor.rs  edge_cases.rs  emitter_integration.rs  erase.rs  fuzz.rs  mod.rs  modes.rs  osc.rs  pty_spawn.rs  real_apps.rs  replies.rs  resize.rs  scroll_region.rs  scrollback.rs  sgr.rs  split_sequence.rs  tabs.rs
src-tauri/src/workspace/: layout.rs
src/benches/: binary_protocol.bench.ts  mock-canvas.ts  renderer.bench.ts
src/components/: App.svelte  SettingsApp.svelte
tests/api/: 01-app-load.test.ts  02-workspace.test.ts  03-terminal.test.ts  04-pane-split.test.ts  05-stress.test.ts  06-stress.test.ts  07-editor-editing.test.ts  08-file-tree-ops.test.ts  09-multiple-workspaces.test.ts  10-tab-management.test.ts  11-pane-management.test.ts  12-terminal-interaction.test.ts  13-keyboard-shortcuts.test.ts  14-breadcrumbs.test.ts  15-ui-zoom.test.ts  16-advanced-stress.test.ts  17-file-save-verify.test.ts  18-file-tree-extended.test.ts  19-command-palette-exec.test.ts  20-zen-mode.test.ts  21-tab-context-menu.test.ts  22-terminal-search-ui.test.ts  23-memory-leak.test.ts  24-multi-window.test.ts  25-lsp-diagnostics.test.ts  26-lsp-hover.test.ts  27-lsp-completions.test.ts  28-file-tree-clipboard.test.ts  29-copy-on-select.test.ts  30-find-replace.test.ts  31-lsp-didchange.test.ts  32-ssh-connect-error.test.ts  global-setup.ts
tests/e2e/: 01-app-load.test.ts  02-workspace.test.ts  03-editor.test.ts  04-terminal.test.ts  05-pane-split.test.ts  06-stress.test.ts  07-editor-editing.test.ts  08-file-tree-ops.test.ts  09-multiple-workspaces.test.ts  10-tab-management.test.ts  11-pane-management.test.ts  12-terminal-interaction.test.ts  13-keyboard-shortcuts.test.ts  14-breadcrumbs.test.ts  15-ui-zoom.test.ts  dev-api.ts  (+20 more)
(+101 files in other folders)
