[package]
name = "malloc"
version = "0.1.0"
edition = "2021"
description = "A modern code editor and terminal workspace manager"

[lib]
name = "malloc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
vte = "0.15"
dirs = "6"
smallvec = "1"
base64 = "0.22"
