[package]
name = "splice"
version = "0.1.0"
edition = "2021"
description = "A modern code editor and terminal workspace manager"

[lib]
name = "splice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
vte = "0.15"
dirs = "6"
smallvec = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ignore = "0.4"
regex = "1"
notify = "6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "terminal_grid"
harness = false

[[bench]]
name = "terminal_vte"
harness = false

[[bench]]
name = "terminal_serialize"
harness = false
