[package]
name = "splice"
version = "0.3.0"
edition = "2021"
description = "A modern code editor and terminal workspace manager"

[lib]
name = "splice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
vte = "0.15"
dirs = "6"
smallvec = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ignore = "0.4"
regex = "1"
notify = "6"
libc = "0.2"
unicode-width = "0.1"
tauri-plugin-webdriver = { version = "0.2", optional = true }
openssh = { version = "0.11", features = ["native-mux"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSMenu", "NSMenuItem", "NSApplication", "NSResponder", "NSWindow"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry"] }

[features]
devtools = ["tauri/devtools"]
e2e = ["tauri-plugin-webdriver"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "terminal_grid"
harness = false

[[bench]]
name = "terminal_vte"
harness = false

[[bench]]
name = "terminal_serialize"
harness = false
